--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row s-container container">
             <div class="s-item box mix mtiger">
                 <img src="./images/mtiger.jpg" class="portfolio-image" alt="">
-                <h4>Malayan Tiger/h4>
+                <h4>Malayan Tiger</h4>
             </div>
             <div class="s-item box mix stiger">
                 <img src="./images/stiger.jpg" class="portfolio-image" alt="">
