fresh from client

--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
     <title>Tiger - an untold story !</title>
     <meta name="description" content="Explore the world of tigers with fascinating facts about their behavior, habitat, and more.">
     <meta name="keywords" content="tigers, big cats, wildlife, conservation, tiger facts">
-    <meta name="author" content="Tova D">
+    <meta name="author" content="Tova Degan">
 
     <!-- Open Graph Meta Tags (for social media sharing) -->
     <meta property="og:title" content="Tiger Kingdom">
@@ -96,7 +96,8 @@
         <section class="team-section " id="team">
             <div class="row">
                 <h2>About me</h2>
-                <p class="little-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit error amet doloremque cumque assumenda minima recusandae tempora fugit ea id. Tenetur explicabo ad iure possimus quia quaerat nostrum dolorem quae!
+                <p class="little-description"> Hello, I'm Tova Degan, a 22 year old student at KDG Hogeschool pursuing Cross Media Management. I call Antwerp my home, where my passion for exploring the dynamic world of media thrives. I am deeply intrigued by the intersection of creativity, technology, and human connection within the realm of cross media. Always eager to learn and grow.
+                 
                 </p>
             </div>
             <div class="row">
@@ -116,7 +117,7 @@
         <!--footer section start-->
         <footer class="footer-section">
             <div class="row">
-                <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova D</h4>
+                <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova Degan</h4>
             </div>
         </footer>
         <!--footer section end-->
