--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Tiger - an untold story !</title>
     <meta name="description" content="Explore the world of tigers with fascinating facts about their behavior, habitat, and more.">
     <meta name="keywords" content="tigers, big cats, wildlife, conservation, tiger facts">
-    <meta name="author" content="Tova D">
+    <meta name="author" content="Tova Degan">
 
     <!-- Open Graph Meta Tags (for social media sharing) -->
     <meta property="og:title" content="Tiger Kingdom">
@@ -96,7 +96,7 @@
         <section class="contact-section" id="contact" style="margin-top: 15px;">
             <div class="row">
                 <h2>get in touch</h2>
-                <p class="little-description">1600 Pennsylvania ve, Washington, United States of America. Tel: (202) xxx-xxxx
+                <p class="little-description"> Antwerp 2018, Tova.degan@outlook.com (mail & Tel) 
                 </p>
             </div>
             <div class="row" style="margin-bottom: 3rem;">
@@ -123,7 +123,7 @@
         <!--footer section start-->
         <footer class="footer-section">
             <div class="row">
-                <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova D</h4>
+                <h4 style="color: white;">&copy All Rights Reserved <span style="color: black;">|</span> Tova Degan</h4>
             </div>
         </footer>
         <!--footer section end-->
