--- a/contact.html
+++ b/contact.html
@@ -93,11 +93,10 @@
     <!--header section end-->
     <section>
         <div class="contact-div">
-            <div class="contact-img">
-                <img src="./images/tova.jpg" alt="">
-            </div>
-            <div class="contact-table">
-                <table id="pdfContent">
+
+            <div class="contact-table " id="pdfContent">
+                <img id="hiddenImage" src="./images/btiger.jpg" alt="Hidden Image">
+                <table>
                     <!-- <tr>
                         <th></th>
                         <th></th>
@@ -129,7 +128,7 @@
                     <tr>
                         <td>Email</td>
                         <td>
-                            <a href="mailto:Tova.degan@outlook.com">Tova.degan@outlook.com</a>
+                            <a class="mail-link" href="mailto:Tova.degan@outlook.com">Tova.degan@outlook.com</a>
                         </td>
                     </tr>
                     <tr>
@@ -138,10 +137,13 @@
                             <a href="https://www.kdg.be/bachelor-cross-media-management" target="_blank"></a>https://www.kdg.be/bachelor-cross-media-management</td>
                     </tr>
                 </table>
-                <div class="buttons">
-                    <button onclick="downloadPDF()">Download PDF</button>
-                    <button onclick="openImageInNewTab()">Open in browser</button>
-                </div>
+            </div>
+            <div class="buttons">
+                <button onclick="downloadPDF()">Download PDF</button>
+                <button onclick="openImageInNewTab()">Open in browser</button>
+            </div>
+            <div class="contact-img">
+                <img src="./images/tova.jpg" alt="">
             </div>
         </div>
     </section>
